# Competitive-Programming-Starters-Kit

./: .gitignore  ArgumentParser.cpp  CMakeLists.txt  Dockerfile  MainHelper.cpp  MainHelper.h  Makefile  Misc.cpp  README.md  SourceFile.cpp  SourceFile.h  TEMPLATE  compile.sh  cpsk  main.cpp
.github/workflows/: automated-tests.yml
cmake/: CodeCoverage.cmake
core/exceptions/: BaseException.h
cpsk/: MainHelper.cpp  MainHelper.h  Misc.cpp  Misc.h  TEMPLATE  compile.sh  cpsk  main.cpp
cpsk/core/exceptions/: BaseException.h
cpsk/src/: MainHelper.h  compile.sh  main.cpp
include/: ArgumentParser.h  Constant.h  MainHelper.h  Misc.h  SourceFile.h
src/: ArgumentParser.cpp  MainHelper.cpp  Misc.cpp  SourceFile.cpp
test/: CMakeLists.txt  SourceFileTest.cpp
